--- a/src/form/Form.css
+++ b/src/form/Form.css
@@ -9,10 +9,11 @@
   align-items: center;
 }
 .formStyle {
-  background-color: var(--primary-clr-4);
-  width: 25.625rem;
+ 
+  background-color: var(--white);
+  width: 24.625rem;
   position: relative;
-  border-radius: 4px 0px 0px 4px;
+  border-radius: 16px;
   padding-inline: 16px;
   padding-block: 10px;
   display: flex;
@@ -26,11 +27,11 @@
 .formStyle::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 9px;
   right: 0;
   width: 4px;
-  height: 100%;
-  background: var(--secondary);
+  height: 97%;
+  background: var(--primary-clr);
   transform: translateX(100%);
   border-radius: 0px 4px 4px 0px;
 }
@@ -41,7 +42,7 @@
   left: 50%;
   width: 64px;
   height: 64px;
-  background: var(--secondary);
+  background: hsl(0deg 0% 96%);;
   transform: translateX(-50%) translateY(-50%);
   border-radius: 50%;
   display: grid;
@@ -50,12 +51,12 @@
 .sendCircle > svg {
   width: 2rem;
   height: 2rem;
-  color: white;
+  color: var(--primary-clr);
 }
 .head {
   font-size: 20px;
   font-weight: bold;
-  color: var(--secondary);
+  color: hsl(0, 81%, 69%);
 }
 
 .fullName {
@@ -65,13 +66,13 @@
 .label {
   font-size: 14px;
   font-weight: bold;
-  color: var(--white);
+  color: var(--secondary-black);
 }
 
 .button {
   all: unset;
-  padding-block: 10px;
-  background: var(--secondary);
+  padding-block: 8px;
+  background: var(--primary-clr);
   color: var(--white);
   border-radius: 4px;
   font-size: 16px;
@@ -85,22 +86,23 @@ textarea,
 select {
   background: var(--white-light);
   border: none;
-  border-radius: 3px;
+  border-radius: 5px;
   outline-color: var(--primary-clr);
   width: 100%;
   padding: 2px 5px;
-  outline: none;
-  caret-color: var(--secondary);
+  /* outline: none; */
+  caret-color: var(--primary-clr);
 }
 
 input[type="text"],
 input[type="email"],
 input[type="number"],
 select {
-  height: 1.7rem;
+  height: 1.9rem;
 }
 select > option {
-  color: red;
+  color: var(--primary-clr);
+  font-weight: 600;
 }
 textArea {
   height: 5rem;
